# pytorch-hackathon-2026

./: Dockerfile  README.md  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
