[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amit-openenv-submission"
version = "1.0.0"
description = "OpenEnv submission for Meta PyTorch Hackathon"
authors = [
    {name = "Amit Kumar"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "openenv",
    "torch"
]

[project.scripts]
server = "server.app:main"
